--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.0.0",
+    "lucide-react": "^0.424.0",
     "next": "14.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "framer-motion": "^12.0.0",
-    "lucide-react": "^0.424.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.67",
+    "@types/react-dom": "^18.2.22",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1",
