--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@shopify/shopify-api": "^11.14.1",
     "framer-motion": "^12.0.0",
     "lucide-react": "^0.424.0",
     "next": "14.2.4",
