--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@shopify/shopify-api": "^11.14.1",
     "framer-motion": "^12.0.0",
     "lucide-react": "^0.424.0",
-    "next": "14.2.4",
+    "next": "^14.2.32",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
